# mcmp-lbm

./: .gitignore  3d_mrt_mcmp  D3Q19_MRT_MCMP.py  README.md  input.json  lbm_parameters.py  lbm_solver.py  license.md  main.py  markdown  pyproject.toml  requirements.txt  set_up.py  setup.py  spheres_loc_radius  utility.py
examples/: hamburg_sand.json
input/: example.json  sand_tiff.json  spheres.json
screenshots/: droplet_test.avi
